fixed body overflow

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -170,10 +170,12 @@ input:checked + .slider:before {
 
 body {
   margin: 0px;
+  padding: 0;
   font-size: 100%;
   height: 520vh;
   width: 100vw;
   scroll-behavior: smooth;
+  overflow: hidden;
 }
 
 .head_div {
