--- a/main.scss
+++ b/main.scss
@@ -8,10 +8,12 @@
 
 body{
     margin:0px;
+    padding: 0;
     font-size: 100%;
     height: 520vh;
     width: 100vw;
     scroll-behavior: smooth;
+    overflow: hidden;
   }
   
   // Header
